Fix: Move film likes calculating from view to trigger